Add Tekton nose test task

--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -10,3 +10,16 @@ spec:
         #!/bin/sh
         echo "Cleaning up temporary files..."
         rm -rf /tmp/*
+---
+apiVersion: tekton.dev/v1beta1
+kind: Task
+metadata:
+  name: nose-test
+spec:
+  steps:
+    - name: run-nose-tests
+      image: python:3.9
+      script: |
+        #!/bin/sh
+        pip install nose
+        nosetests
